crates/reinhardt-pages/tests/ui/style/fail/duplicate_global.rs
use reinhardt_pages::{style_def};

#[style_def]
static STYLES: CardStyles = style! {
	globals {
		accent: Color;
		accent: Color;
	}
	.card {
		color: red;
	}
};
fn main() {}
