crates/reinhardt-pages/tests/ui/style/fail/duplicate_global.stderr
error: duplicate global `accent`; global names must be unique
 --> tests/ui/style/fail/duplicate_global.rs:7:3
  |
7 |         accent: Color;
  |         ^^^^^^

error: global `accent` was first declared here
 --> tests/ui/style/fail/duplicate_global.rs:6:3
  |
6 |         accent: Color;
  |         ^^^^^^
